# PowerBrilliant_back

./: .env  .gitignore  API_Document.docx  Cargo.toml  ENVIRONMENT_VARIABLES.md  MutiLingual.txt  README.md  rust_setup.txt
PG/: 1.PG_setup.txt  PG_comments.txt  PG_communities.txt  PG_community_members.txt  PG_followers.txt  PG_jobapps.txt  PG_post_likes.txt  PG_posts.txt  PG_user_badges.txt  PS_jobList.txt  business_accounts.txt  updated job listing .txt
Snips/: Payload.txt
src/: config.rs  db.rs  faker.rs  main.rs  oauth.rs  oauth_config.rs  upload_routes.rs
src/handlers/: business_accounts_handler.rs  comments_handler.rs  communities_handlers.rs  community_member_handlers.rs  follower_handlers.rs  google_handler.rs  job_application_handler.rs  joblist_handlers.rs  mod.rs  post_handlers.rs  post_likes_handles.rs  share_handler.rs  upload_handler.rs  user_badges_handlers.rs  user_handler.rs
src/models/: business_accounts.rs  comments.rs  communities.rs  community_members.rs  followers.rs  job_applications.rs  job_list.rs  mod.rs  post_likes.rs  posts.rs  share_post.rs  user.rs  user_badges.rs
src/routes/: business_accounts_routes.rs  comments_routes.rs  community_members_routes.rs  community_routes.rs  follower_routes.rs  google_routes.rs  job_application_routes.rs  jobs_routes.rs  mod.rs  post_likes_routes.rs  post_routes.rs  share_routes.rs  upload_routes.rs  user_badges_routes.rs  user_routes.rs
