[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "time","macros"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
oauth2 = "4.4"
url = "2"
fake = "4.3"
jsonwebtoken = "9"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

rand = "0.8.5"
actix-multipart = "0.6"
actix-files = "0.6.6"
futures = "0.3"
infer = "0.13"